<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbb1815">
<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="攻略"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="38dp"
        android:textColor="#ffffff"/>-->
    <TextView
        android:id="@+id/fanhui_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="返回"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:background="@drawable/help_setbt_style"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/tip_layout1">
                <TextView
                    android:id="@+id/tip_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_title_tips1"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="22sp"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/tip_icon1"/>
                <ImageView
                    android:id="@+id/tip_icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/go_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#ffffffff">
            </LinearLayout>
            <!--自动抢红包必须配置-->
            <LinearLayout
                android:id="@+id/tip_content_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <!--详细设置-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical"
                    >
                    <!--开启辅助功能-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set1_tips"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="#ffffffff"
                            android:textSize="15sp"
                            android:layout_toLeftOf="@+id/gotoset1"
                            />
                        <!--去开启辅助功能-->
                        <TextView
                            android:id="@+id/gotoset1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goset_bt_text1"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            android:background="@drawable/help_setbt_style"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_set_tips1"
                        android:textColor="#ffffffff"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/tip0"
                        android:layout_marginLeft="3dp"/>
                </LinearLayout>
<!--                &lt;!&ndash;白线&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff">
                </LinearLayout>-->
                
                <!--关闭屏幕锁定-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set2_tips"
                            android:layout_centerVertical="true"
                            android:textColor="#ffffffff"
                            android:textSize="15sp"
                            android:layout_toLeftOf="@+id/gotoset2"
                            />
                        <!--去关闭-->
                        <TextView
                            android:id="@+id/gotoset2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goset_bt_text2"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            android:background="@drawable/help_setbt_style"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_set_tips2"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#ffffffff"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@mipmap/tip4"/>
                </LinearLayout>
<!--                &lt;!&ndash;白线&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff">
                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:textColor="#ffffffff"
                            android:textSize="15sp"
                            android:text="@string/set3_tips"
                            android:layout_toLeftOf="@+id/gotoset3"/>
                        <!--去微信-->
                        <TextView
                            android:id="@+id/gotoset3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goset_bt_text3"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            android:background="@drawable/help_setbt_style"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_set_tips3"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#ffffffff"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/tip2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>
                </LinearLayout>
<!--                &lt;!&ndash;白线&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                </LinearLayout>-->
            </LinearLayout>

            <!--为什么不能自动抢红包-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/tip_layout2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_title_tips2"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="22sp"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentLeft="true"
                    />
                <ImageView
                    android:id="@+id/tip_icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/go_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffffff">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tip_content_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set4_tips"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set5_tips"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set6_tips"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set7_tips"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/tip2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set8_tips"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffffff"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>